<resources>
    <string name="app_name">Panic Sign</string>

    <string name="action_change">Change the Sign!</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="error_generic">Oops, something went wrong!</string>
    <string name="error_rate_limited">Too many requests!</string>
    <string name="settings">Settings</string>
    <string name="settings_features">Features</string>
    <string name="settings_send_after_voice">Auto submit</string>
    <string name="settings_sum_send_after_voice">Submit colors to the real sign automatically when using voice control</string>
    <string name="success">Sign changed!</string>
    <string name="about_title">About</string>
    <string name="about_disclaimer">This app is <b>not</b> produced or endorsed by <a href="https://panic.com">Panic Inc.</a>

        \n\nThe Panic Logo is used with permission from Panic Inc.

        \n\nThis project was inspired by <a href="https://panic.com/blog/the-panic-sign/">this</a> blog post.

        \n\nThe code is open source and can be found on <a href="https://github.com/Memorion/PanicSign-Android">Github</a>.
        \n
    </string>

    <string name="key_pref_auto_send" translatable="false">PREF_AUTO_SEND</string>
    <string name="key_top" translatable="false">TOP</string>
    <string name="key_bottom" translatable="false">BOTTOM</string>

    <string name="red">red</string>
    <string name="orange">orange</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="green2">dark green</string>
    <string name="teal">teal</string>
    <string name="light_blue">light blue</string>
    <string name="blue">blue</string>
    <string name="purple">purple</string>
    <string name="pink">pink</string>

    <string-array name="colors_spoken">
        <item name="spoken_red">@string/red</item>
        <item name="spoken_orange">@string/orange</item>
        <item name="spoken_yellow">@string/yellow</item>
        <item name="spoken_green">@string/green</item>
        <item name="spoken_green2">@string/green2</item>
        <item name="spoken_teal">@string/teal</item>
        <item name="spoken_light_blue">@string/light_blue</item>
        <item name="spoken_blue">@string/blue</item>
        <item name="spoken_purple">@string/purple</item>
        <item name="spoken_pink">@string/pink</item>
    </string-array>

    <string name="key_red" translatable="false">RED</string>
    <string name="key_orange" translatable="false">ORANGE</string>
    <string name="key_yellow" translatable="false">YELLOW</string>
    <string name="key_green" translatable="false">GREEN</string>
    <string name="key_green2" translatable="false">GREEN2</string>
    <string name="key_teal" translatable="false">TEAL</string>
    <string name="key_light_blue" translatable="false">LIGHTBLUE</string>
    <string name="key_blue" translatable="false">BLUE</string>
    <string name="key_purple" translatable="false">PURPLE</string>
    <string name="key_pink" translatable="false">PINK</string>

    <string-array name="colors_keys">
        <item name="key_red">@string/key_red</item>
        <item name="key_orange">@string/key_orange</item>
        <item name="key_yellow">@string/key_yellow</item>
        <item name="key_green">@string/key_green</item>
        <item name="key_green2">@string/key_green2</item>
        <item name="key_teal">@string/key_teal</item>
        <item name="key_light_blue">@string/key_light_blue</item>
        <item name="key_blue">@string/key_blue</item>
        <item name="key_purple">@string/key_purple</item>
        <item name="key_pink">@string/key_pink</item>
    </string-array>

    <string name="key_red_rgb" translatable="false">red</string>
    <string name="key_orange_rgb" translatable="false">orange</string>
    <string name="key_yellow_rgb" translatable="false">yellow</string>
    <string name="key_green_rgb" translatable="false">green</string>
    <string name="key_green2_rgb" translatable="false">green2</string>
    <string name="key_teal_rgb" translatable="false">teal</string>
    <string name="key_light_blue_rgb" translatable="false">lightblue</string>
    <string name="key_blue_rgb" translatable="false">blue</string>
    <string name="key_purple_rgb" translatable="false">purple</string>
    <string name="key_pink_rgb" translatable="false">pink</string>

    <string-array name="colors_keys_rgb">
        <item name="key_red_rgb">@string/key_red_rgb</item>
        <item name="key_orange_rgb">@string/key_orange_rgb</item>
        <item name="key_yellow_rgb">@string/key_yellow_rgb</item>
        <item name="key_green_rgb">@string/key_green_rgb</item>
        <item name="key_green2_rgb">@string/key_green2_rgb</item>
        <item name="key_teal_rgb">@string/key_teal_rgb</item>
        <item name="key_light_blue_rgb">@string/key_light_blue_rgb</item>
        <item name="key_blue_rgb">@string/key_blue_rgb</item>
        <item name="key_purple_rgb">@string/key_purple_rgb</item>
        <item name="key_pink_rgb">@string/key_pink_rgb</item>
    </string-array>
    
</resources>
